<resources>
    <string name="app_name">Bookify</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Explore</string>
    <string name="title_download">Library</string>
    <string name="provider_lang_key" translatable="false">provider_lang_key</string>
    <string name="restore_key" translatable="false">restore_key</string>
    <string name="restore_settings">Restore data from backup</string>
    <string name="let_s_get_started">Let’s Get Started!</string>
    <string name="create_your_account">Create your account</string>
    <string name="hint_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="send">Send</string>
    <string name="search_hint">Search Novels</string>
    <string name="synopsis">Synopsis</string>
    <string name="no_data">No Data</string>
    <string name="no_author">Author not found</string>
    <string name="no_chapters">No Chapters</string>
    <string name="generate_epub">Generate Epub</string>
    <string name="generating_epub">Generating Epub</string>
    <string name="reload_error">Retry connection…</string>
    <string name="download_text">Download</string>
    <string name="download">Download</string>
    <string name="novel_imagecover_descript">Novel Imagecover</string>
    <string name="background_image_descript">Background Image</string>
    <string name="back_to_search">Back to search</string>
    <string name="downloads_text">Downloads</string>
    <string name="open_text">Read</string>
    <string name="update_text">Update</string>
    <string name="provider_list_key">provider_list</string>
    <string name="search_providers_list_key">search_providers_list</string>
    <string name="auto_update_key">auto_update</string>
    <string name="external_reader_key">external_reader</string>
    <string name="remove_external_key">remove_external</string>
    <string name="manual_check_update_key">manual_check_update</string>
    <string name="backup_key">backup_key</string>
    <string name="rating_format_key">rating_format</string>
    <string name="grid_format_key">grid_format</string>
    <string name="download_format_key">download_format</string>
    <string name="exampleTXT">"this is <annotation key="rounded">a regular</annotation> paragraph."</string>
    <string name="tags">Tags</string>
    <string name="views">Views</string>
    <string name="delete">Delete</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="poster_descript">Poster</string>
    <string name="sort_downloads_descript">Sort Downloads</string>
    <string name="filter_dialog_sort_by">Sort by</string>
    <string name="filter_dialog_filter">Apply</string>
    <string name="filter_dialog_general">General:</string>
    <string name="filter_dialog_order_by">Order by:</string>
    <string name="filter_dialog_genre">Genre:</string>
    <string name="browse_list_icon">Icon</string>
    <string name="home_title_text">Explore</string>
    <string name="mainpage_filter">Filter</string>
    <string name="shadow_descript">Shadow</string>
    <string name="user_image_avatar">Avatar</string>
    <string name="change_providers_descript">Change Provider</string>
    <string name="poster_open_source_descript">Open Source</string>
    <string name="mainpage_sort_by_button_text">Sort By</string>
    <string name="read_action_settings">Settings</string>
    <string name="read_action_chapters">Chapters</string>
    <string name="read_action_chapters_formatted" formatted="true">%d Chapters</string>
    <string name="read_action_tts">Text To Speech</string>
    <string name="read_action_screen_rotation">Screen Rotation</string>
    <string name="grid_view">Grid</string>
    <string name="list_view">List</string>
    <string name="download_open_action">Open</string>
    <string name="download_read_action">Read</string>
    <string name="download_update_action">Update</string>
    <string name="download_delete_action">Delete</string>
    <string name="default_text">Default</string>
    <string name="rotation_type">Rotation type</string>
    <string name="rotation_free">Free</string>
    <string name="rotation_portrait">Portrait</string>
    <string name="rotation_landscape">Landscape</string>
    <string name="rotation_force_portrait">Locked portrait</string>
    <string name="rotation_force_landscape">Locked landscape</string>
    <string name="inf_scroll">Infinite scroll</string>
    <string name="button_scroll">Chapter buttons</string>
    <string name="overscroll_scroll">Overscroll</string>
    <string name="type_reading">Reading</string>
    <string name="type_on_hold">On-Hold</string>
    <string name="type_completed">Completed</string>
    <string name="type_dropped">Dropped</string>
    <string name="type_plan_to_read">Plan to Read</string>
    <string name="type_none">None</string>
    <string name="read_display_settings">Settings</string>
    <string name="read_text_size">Text</string>
    <string name="bigger_font">Bigger Font</string>
    <string name="smaller_font">Smaller Font</string>
    <string name="scroll_with_volume_keys">Scroll with volume keys</string>
    <string name="general_settings">General</string>
    <string name="lock_tts">Lock TTS scroll area</string>
    <string name="reading_color">Reading Color</string>
    <string name="read_color">Reader Theme</string>
    <string name="show_battery">Show Battery</string>
    <string name="show_time">Show Time</string>
    <string name="result_share">Share</string>
    <string name="reader_font">Reader Font</string>
    <string name="font">Font</string>
    <string name="background_color">Background Color</string>
    <string name="text_color">Text Color</string>
    <string name="long_download_time">Warning, This source has extremely long download time, streaming is recommended</string>
    <string name="quickstream_novel_text">Stream read novel</string>
    <string name="history_more_options">More Options</string>
    <string name="stream_read">Stream Read</string>
    <string name="clear_history">Clear History</string>
    <string name="nothing_read_recently">Nothing read recently</string>
    <string name="monke_eating">Monke Eating</string>
    <string name="tab_downloads">Downloads</string>
    <string name="reviews_to_top">To top</string>
    <string name="text_size">Text Size</string>
    <string name="text_padding">Text Side Margin</string>
    <string name="reset_value">Reset to default</string>
    <string name="text_font">Text Font</string>
    <string name="scroll_type">Scroll Type</string>
    <string name="no_chapters_found">No chapters found</string>
    <string name="error_loading_novel">Error loading novel</string>
    <string name="error_loading_chapter">Error loading chapter</string>
    <string name="text_padding_top">Text Top Margin</string>
    <string name="home_more_info">More info</string>
    <string name="home_expanded_hide">Hide</string>
    <string name="reload_chapter">Reload Chapter</string>
    <string name="provider_lang_settings">Provider Languages</string>
    <string name="sort_apply">Apply</string>
    <string name="sort_cancel">Cancel</string>
    <string name="keep_screen_active">Keep screen active</string>
    <string name="twelve_hour_time">12 Hour time</string>
    <string name="backup_settings">Backup data</string>
    <string name="restore_success">Loaded backup file</string>
    <string name="restore_failed_format" formatted="true">Failed to restore data from file %s</string>
    <string name="backup_success">Successfully stored data</string>
    <string name="backup_failed">Storage permissions missing, please try again</string>
    <string name="backup_failed_error_format">Error backing up %s</string>
    <string name="tts_locale">Language</string>
    <string name="tts_voice">Voice</string>
    <string name="tts_voice_title">TTS Voice</string>
    <string name="theme_key">theme_key</string>
    <string name="theme">Theme</string>
    <string name="primary_color_key">primary_color_key</string>
    <string name="primary_color_settings">Main Color</string>
    <string name="library_display_mode">Library Display Mode</string>
    <string name="rating_format">Rating Format</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="remove_from_history_format">This remove %s from your history.\nAre you sure?</string>
    <string name="permanently_delete_format">This will permanently delete %s.\nAre you sure?</string>
    <string name="remove_all_history">Are you sure?\nAll history will be lost.</string>
    <string name="remove_history">Remove History</string>
    <string name="search_providers">Search Providers</string>
    <string name="no_more_chapters">No more chapters</string>
    <string name="paused">Paused</string>
    <string name="stopped">Stopped</string>
    <string name="failed">Failed</string>
    <string name="done">Done</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="text_to_speech">Text To Speech</string>
    <string name="text_to_speech_channel_description">The TTS notification channel</string>
    <string name="overall_rating_format">Overall %s</string>
    <string name="battery_format">%d%%</string>
    <string name="novel">Novel</string>
    <string name="reviews">Reviews</string>
    <string name="related">Recommended</string>
    <string name="votes_format">%d Votes</string>
    <string name="latest_format">Latest: %s</string>
    <string name="new_update_found_format">New update found!\n %s -> %s</string>
    <string name="download_started">Download started</string>
    <string name="download_failed">Download failed</string>
    <string name="update">Update</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="downloaded">Downloaded</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="re_downloaded">Re-Download</string>
    <string name="loading">Loading…</string>
    <string name="loading_format" formatted="true">Loading %s…</string>
    <string name="chapter_format" formatted="true">Chapter %s</string>
    <string name="default_sort">Default</string>
    <string name="recently_sort">Recently opened</string>
    <string name="alpha_sort_az">Alphabetical (A-Z)</string>
    <string name="alpha_sort_za">Alphabetical (Z-A)</string>
    <string name="download_sort_hl">"Download count (high to low)"</string>
    <string name="download_sort_lh">"Download count (low to high)"</string>
    <string name="download_perc_hl">Download percentage (high to low)</string>
    <string name="download_perc_lh">Download percentage (low to high)</string>
    <string name="reload_chapter_format">Reloading chapter %s</string>
    <string name="ok">OK</string>
    <string name="more_info">More Info</string>
    <string name="download_path_key">download_path_key</string>
    <string name="download_path_pref">Download path</string>
    <string name="bionic_reading">Bionic Reading</string>
    <string name="sign_up">Sign Up Now</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Paswword</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome To Bookify</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>